feat: add endpoint to retrieve all session tab orders
